roboshop-v1/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: roboshop
spec:
  type: LoadBalancer
  selector:
    appName: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: roboshop
  labels:
    appName: frontend
spec:
  containers:
    - name: frontend
      image: public.ecr.aws/w8x4g9h7/roboshop-v3/frontend
