roboshop-v1/payment.yml
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: roboshop
spec:
  selector:
    appName: payment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: payment
  namespace: roboshop
  labels:
    appName: payment
spec:
  containers:
    - name: payment
      image: public.ecr.aws/w8x4g9h7/roboshop-v3/payment
